recursion.logo.koch.SquareKoch.scala.error
Compilation error:
SquareKoch:16: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^SquareKoch:18: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^SquareKoch:20: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^SquareKoch:22: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^SquareKoch:24: error: not found: value snowSide
    snowSide(levels-1,length/3)
    ^